fix picture + text scaling issue on small screens

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -14,6 +14,12 @@
     display: inline-block;
 }
 
+.picture {
+    flex-grow: 1;
+    width: 50%;
+    display: inline-block;
+}
+
 @media (max-width: 750px) {
     .container {
         display: block;
@@ -24,5 +30,10 @@
     }
     .content {
         display: block;
+        width: 100%;
+    }
+    .picture {
+        display: block;
+        width: 100%;
     }
 }
